[project]
name = "stochastic-simulations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jasper Aden", email = "jaaden@ethz.ch" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "scipy>=1.16.3",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
